clang/test/BSC/Negative/OwnedStruct/partially_moved/destuctor_partially_moved_field_val/destuctor_partially_moved_field_val.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct Weak {};

_Owned struct W {
_Public:
	Weak p;
};

void test() {
    Weak weak = { };
	W w1 = { .p = weak };  
	W w2 = { .p = w1.p };  
} //expected-error {{partially moved _Owned struct:`w1` at scope end, w1.p is moved}}
